# SatPlatform

./: .$结构图.drawio.bkp  .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  结构图.drawio
.cursor/rules/: alwaysrules.mdc  attacherules.mdc  manualrules.mdc  requestedrules.mdc
SatCloudService/: README.md  angular.json  package-lock.json  package.json
SatCloudService/src/: index.html  styles.css
SatCloudService/src-tauri/: Cargo.toml  tauri.conf.json
SatCloudService/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
SatCloudService/src-tauri/src/api/: mod.rs  task_handler.rs
SatCloudService/src-tauri/src/db/: mod.rs
SatCloudService/src-tauri/src/mq/: mod.rs
SatCloudService/src-tauri/src/ws_server/: client_session.rs  connection_manager.rs  heartbeat_monitor.rs  message_router.rs  mod.rs  service.rs  task_state_manager.rs
SatCloudService/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
SatCloudService/src/app/cloud-admin-state-injector/: cloud-admin-state-injector.component.css  cloud-admin-state-injector.component.html  cloud-admin-state-injector.component.ts
SatControlCenter/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
SatControlCenter/src/: index.html
SatControlCenter/src-tauri/: Cargo.toml  tauri.conf.json
SatControlCenter/src-tauri/src/: config.rs  error.rs  event.rs  events.rs  lib.rs  main.rs  state.rs
SatControlCenter/src-tauri/src/api_client/: mod.rs  service.rs
SatControlCenter/src-tauri/src/commands/: app_lifecycle_cmds.rs  data_cmds.rs  dev_tools_cmds.rs  general_cmds.rs  mobile_cmds.rs  mod.rs  network_cmds.rs  task_cmds.rs  task_commands.rs  test_cmds.rs  ws_cmds.rs
SatControlCenter/src-tauri/src/mobile_specific/: mod.rs
SatControlCenter/src-tauri/src/plc_comms/: mod.rs
SatControlCenter/src-tauri/src/ws_client/: mod.rs  service.rs  services.rs
SatControlCenter/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
SatControlCenter/src/app/core/: index.ts
SatControlCenter/src/app/core/constants/: tauri-events.constants.ts
SatControlCenter/src/app/core/models/: task-debug-state.model.ts  tauri-event-payloads.model.ts  tauri-events.model.ts
SatControlCenter/src/app/core/services/: client-task-state.service.ts  debug.service.ts  websocket.service.ts
SatControlCenter/src/app/features/client-task-state-display/: client-task-state-display.component.ts
SatControlCenter/src/app/features/debug-tools/debug-sender/: debug-sender.component.scss  debug-sender.component.ts
SatControlCenter/src/app/features/websocket-manager/: websocket-manager.component.html
SatOnSiteMobile/: README.md  angular.json  package-lock.json  package.json
SatOnSiteMobile/src/: index.html  main.ts  styles.css
SatOnSiteMobile/src-tauri/: Cargo.toml  tauri.conf.json
SatOnSiteMobile/src-tauri/src/: config.rs  error.rs  event.rs  events.rs  lib.rs  main.rs  state.rs
SatOnSiteMobile/src-tauri/src/api_client/: mod.rs  service.rs
SatOnSiteMobile/src-tauri/src/commands/: app_lifecycle_cmds.rs  data_cmds.rs  dev_tools_cmds.rs  general_cmds.rs  mobile_cmds.rs  mod.rs  network_cmds.rs  task_cmds.rs  task_commands.rs  test_cmds.rs  ws_cmds.rs
SatOnSiteMobile/src-tauri/src/device_comms/: mod.rs
SatOnSiteMobile/src-tauri/src/mobile_specific/: mod.rs
SatOnSiteMobile/src-tauri/src/ws_client/: mod.rs  service.rs  services.rs
SatOnSiteMobile/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts
SatOnSiteMobile/src/app/core/models/: tauri-event-payloads.model.ts
SatOnSiteMobile/src/app/core/services/: client-task-state.service.ts  debug.service.ts  tauri-listener.service.ts
SatOnSiteMobile/src/app/features/client-task-state-display/: client-task-state-display.component.html  client-task-state-display.component.scss
SatOnSiteMobile/src/app/features/debug-tools/debug-sender/: debug-sender.component.html  debug-sender.component.ts
SatOnSiteMobile/src/app/features/websocket-manager/: websocket-manager.component.scss  websocket-manager.component.ts
common_models/: Cargo.toml
common_models/src/: enums.rs  lib.rs  project_details.rs  task_info.rs  task_models.rs  ws_payloads.rs
common_models/src/templates/: mod.rs
rust_websocket_utils/: Cargo.toml
rust_websocket_utils/src/: error.rs  lib.rs  message.rs
rust_websocket_utils/src/client/: mod.rs  transport.rs
rust_websocket_utils/src/server/: mod.rs  transport.rs
rust_websocket_utils/tests/: server_transport_integration_test.rs
servertest/: Cargo.toml  README.md  app_settings.json
servertest/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
servertest/src/api/: mod.rs
servertest/src/db/: mod.rs
servertest/src/mq/: mod.rs
servertest/src/ws_server/: client_session.rs  connection_manager.rs  heartbeat_monitor.rs  message_router.rs  mod.rs  service.rs  task_state_manager.rs
