[package]
name = "sat-cloud-service"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]] # 通常不需要显式定义，如果 main.rs 存在，它会自动成为名为 'app' 的二进制文件
# name = "app"
# path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tauri = { version = "2.0.0-beta", features = ["tray-icon", "native-tls-vendored"] }
tauri-plugin-log = { version = "2.0.0-rc" }
common_models = { path = "../../common_models" }
rust_websocket_utils = { path = "../../rust_websocket_utils" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.30"
tokio-tungstenite = "0.23.1"
dashmap = "5.5.3"

# WebSocket 和网络相关
axum = { version = "0.7.4", features = ["ws", "macros"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tower = { version = "0.4" }

openssl = { version = "0.10", features = ["vendored"] }

[features]
# default = ["custom-protocol"]
# custom-protocol = ["tauri/custom-protocol"]
