[package]
name = "sat-on-site-mobile"
version = "0.1.0"
description = "Satellite On-Site Mobile Application"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 新增依赖，与 SatControlCenter 保持一致
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }

# 修正项目内部依赖的路径
common_models = { path = "../../common_models" }
rust_websocket_utils = { path = "../../rust_websocket_utils" }

[features]
custom-protocol = ["tauri/custom-protocol"]
